--- a/alpha/advertising/templates/advertising/setup/payments.html
+++ b/alpha/advertising/templates/advertising/setup/payments.html
@@ -1,105 +1,59 @@
-<div class="pay-now-header">
-    Pay Now With
-</div>
-<div class="pay-now-widget">
-    <div class="info">
-        <div class="budget">
-            <table>
-                <tr>
-                    <td>Budget(CAD):</td>
-                    <td>
-                        <input type="text" id="id_budget" name="order_budget" value="0.0">
-
-                        <input type="hidden" name="order_budget_currency" value="CAD">
-                    </td>
-                    <td>
-                        <a href="javascript:void;" class="balloon">
-                            <div class="buttonq"></div>
-                        </a>
-                        <div class="balloon-content">
-                            <h3>
-                                Help - Advertising Campaign
-                                <i>[Budget]:</i>
-                            </h3>
-                            <p>
-                                Budget for campaign
-                            </p>
-                        </div>
-                    </td>
-                </tr>
-            </table>
+{% if account.bonus_budget %}
+{{ form.budget_type }}
+<div class="tabs-container no-borders">
+    <ul class="tabs right" data-page-id="setup-advertising-campaign">
+        {% if account.bonus_budget %}
+            <li data-tab-id="setup-bonus-budget" class="setup-bonus-budget">
+                <span>Try for free</span>
+            </li>
+        {% endif %}        
+        <li data-tab-id="setup-real-budget" class="setup-real-budget current">
+            <span>Pay now with</span>
+        </li>
+    </ul>
+    <div class="box">
+        <div class="pay-now-header">
+            Try for free
         </div>
-        <table class="taxes">
-            {% if account_taxes %}
-                {% for tax in account_taxes %}
-                    <tr class="tax-row">
-                        <td>
-                            <input type="hidden" value="{{ tax.tax }}" class="tax-input">
-                            {{ tax.name }} ({{ tax.pretty_tax }}%):
-                        </td>
-                        <td>
-                            C$<span class="tax-price">
-                                0
-                            </span>
-                        </td>
-                    </tr>
-                {% endfor %}
-            {% endif %}
-            <tr class="total-price-row">
-                <td>
-                    Total:
-                </td>
-                <td>
-                    C$<span class="total-price-output">
-                        0
-                    </span>
-                </td>
-            </tr>
-        </table>
-        
+        <div class="pay-now-widget">
+            <div class="info">
+                <div class="budget">
+                    <table>
+                        <tr>
+                            <td colspan="3">
+                                You have {{ account.bonus_budget }} bonus to try.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Budget(CAD):</td>
+                            <td>
+                                <input type="text" id="id_bonus_budget" name="bonus_budget" value="0.0">
+                                <input type="hidden" name="bonus_budget_currency" value="CAD">
+                            </td>
+                            <td>
+                                <a href="javascript:void;" class="balloon">
+                                    <div class="buttonq"></div>
+                                </a>
+                                <div class="balloon-content">
+                                    <h3>
+                                        Help - Advertising Campaign
+                                        <i>[Budget]:</i>
+                                    </h3>
+                                    <p>
+                                        Budget for campaign
+                                    </p>
+                                </div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="choose-payment-system">
-        <table>
-            <tr>
-                <td>
-                    <div class="checkbox">
-                        <input id="payment_paypal_id" type="radio" name="payment_system" value="paypal" checked="checked" >
-                        <label for="payment_paypal_id"></label>
-                        <label for="payment_paypal_id">
-                            <img src="{{ STATIC_URL }}/images/featured/paypal.png"/>
-                        </label>
-                    </div>
-                </td>
-                <td>
-                    <div class="checkbox disabled">
-                        <input id="payment_visa_id" type="radio" name="payment_system" value="visa" disabled>
-                        <label for="payment_visa_id"></label>
-                        <label for="payment_visa_id">
-                            <img src="{{ STATIC_URL }}/images/featured/visa.png"/>
-                        </label>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="checkbox disabled">
-                        <input id="payment_email_money_id" type="radio" name="payment_system" value="email_money_transfer" disabled>
-                        <label for="payment_email_money_id"></label>
-                        <label for="payment_email_money_id">
-                            <img src="{{ STATIC_URL }}/images/featured/email_money_transfer.png"/>
-                        </label>
-                    </div>
-                </td>
-                <td>
-                    <div class="checkbox disabled">
-                        <input id="payment_master_card_id" type="radio" name="payment_system" value="master_card" disabled>
-                        <label for="payment_master_card_id"></label>
-                        <label for="payment_master_card_id">
-                            <img src="{{ STATIC_URL }}/images/featured/master_card.png"/>
-                        </label>
-                    </div>
-                </td>
-            </tr>
-        </table>
+    <div class="box visible">
+        {% include 'advertising/setup/real_payments.html' %}
     </div>
 </div>
+{% else %}
+    {% include 'advertising/setup/real_payments.html' %}
+{% endif %}
