--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -13,6 +13,7 @@
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/create_event/venue_account_owner.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/tabs.js"></script>
+    <script src="{{STATIC_URL}}js/advertising/total-price-calculation.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>
 {% endblock %}
 
