making featured events statistics in the venue account

--- a/alpha/accounts/templates/venue_accounts/_venue_featured_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_featured_events_table.html
@@ -5,18 +5,64 @@
 
 
 {% paginate 6 venue_featured_events %}
-<div class="account-entry-wrapper entry-wrapper">
-{% for event in venue_featured_events %}    
-    <div class="entry-info">
-        {% short_single_event event %}
-        <div class="clr"></div>
-    </div>
-{% empty %}
-    <p>
-        no featured events
-    </p>
-{%endfor%}
-</div>
+<table class="account-featured-table account-entry-wrapper entry-wrapper">
+    <tr>
+        <th class="action">Event</th>
+        <th class="action">Status</th>
+        <th class="action">Views</th>
+        <th class="action">Clicks</th>
+        <th class="action">From-To</th>
+        <th class="action">Regions</th>
+    </tr>
+    {% for event in venue_featured_events %}
+        <tr>
+            <td class="no-padding">
+                <div class="entry-info">
+                    <div class="entry-img-prev">
+                        {% if event.event_day.picture %}
+                            <img src="{% cropped_thumbnail event.event_day.base "cropping" width=60 %}" height="60px" weight="60px">
+                        {% else %}
+                            <img src="{{ STATIC_URL }}images/default-event.jpg" height="60px" weight="60px">
+                        {% endif %}
+                    </div>
+                    <div class="entry-details-wrapper">
+                        <div class="title">
+                            <a href="{% url 'event_view' event.event_day.slug event.event_day.start_time|date:"Y-m-d" %}">
+                                {{ event.event_day.name }}&nbsp;
+                            </a>
+                        </div>
+                    </div>
+                    <div class="clr"></div>
+                </div>
+            </td>
+            <td>
+                {% if event.active %}
+                    On
+                {% else %}
+                    Off
+                {% endif %}
+            </td>
+            <td>{{ event.views }}</td>
+            <td>{{ event.clicks }}</td>
+            <td align="center">
+                {{ event.start_time|date:"b d, Y"|title }}
+                <br/>-<br/>
+                {{ event.end_time|date:"b d, Y"|title }}
+            </td>
+            <td>
+                {% if event.all_of_canada %}
+                    All of Canada
+                {% else %}
+                    {{ event.regions_representation }}
+                {% endif %}
+            </td>
+        </tr>
+    {% empty %}
+        <p>
+            no featured events
+        </p>
+    {%endfor%}
+</table>
 
 <div class="entry-navigation-np">
     <p>
