fixing bugs in the FB posting

--- a/alpha/cityfusion_admin/templates/actions/actions.html
+++ b/alpha/cityfusion_admin/templates/actions/actions.html
@@ -6,7 +6,7 @@
         <a href="{% url 'admin_setup_featured' event.event_identifier %}">Make featured</a>
         {% if event.owner.id == request.user.id %}
             {% if not event.facebook_event %}
-                <a href="{% url 'event_post_to_facebook' event.id %}">Post to FB</a>
+                <a href="{% url 'event_post_to_facebook' event.event.id %}">Post to FB</a>
             {% else %}
                 <a href="https://www.facebook.com/events/{{ event.facebook_event.eid }}/" target="_blank">
                     View on FB
