--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -41,6 +41,8 @@
     <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/accounts/link_venue_to_account.js" type="text/javascript" ></script>
     <script src="{{STATIC_URL}}js/advertising/advertising-images.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript"></script>
+    <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
 {% endblock %}
 
 {% block content %}
