--- a/alpha/home/templates/pages/advertising.html
+++ b/alpha/home/templates/pages/advertising.html
@@ -13,30 +13,29 @@
                     <div class="inner-content">
                         <ul class="entries-list">
                             <li>
-                                <div class="list-entry-title" data-type="entry_title">Types of ads</div>
+                                <div class="list-entry-title" data-type="entry_title">Featured Events</div>
                                 <div class="list-entry-text first" data-type="entry_text">
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
+                                    These types of ads display across the top of the home page.  These are designed to catch the attention of the user towards your event.  They show up randomly with each new page and can be browsed through by clicking the arrow in the Featured Events box. They also show up in the reminder and "in the loop" emails.  They cost $2.00 per day.   You can find the option to make an event featured in the quick access box on the event itself or in your account info page under the Events Tab.
                                 </div>
                             </li>
                             <li>
-                                <div class="list-entry-title" data-type="entry_title">Cost for ads</div>
-                                <div class="list-entry-text" data-type="entry_text">
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
+                                <div class="list-entry-title" data-type="entry_title">Cost per Mile (CPM)</div>
+                                <div class="list-entry-text first" data-type="entry_text">
+                                    Also known as cost per thousand.These ads you pay for a certain number of impressions.  How this work is:
+                                    for every 1000 impressions you would pay $ .50 to $3.00 depending on the size of the ad
+                                    So if you chose to spend $1000.00 your advertisement would be displayed 500,000 times across the screens of the viewers. (based on .50 add)
+                                    This can be found in your account page titled "Create New Add".
+                                    A reminder will be emailed to you when your funds are getting low.
                                 </div>
                             </li>
                             <li>
-                                <div class="list-entry-title" data-type="entry_title">Cost per mile</div>
-                                <div class="list-entry-text" data-type="entry_text">
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
-                                    Aenean sed fermentum metus. Integer imperdiet nisi vel lectus fermentum malesuada.
-                                    Aliquam tincidunt tempus tempus. Aliquam euismod mauris non eros facilisis.
+                                <div class="list-entry-title" data-type="entry_title">Cost per Click (CPC)</div>
+                                <div class="list-entry-text first" data-type="entry_text">
+                                    Rather than paying for impressions, you are paying for every time someone clicks your ad and goes to your website or event page.  These type of advertisements typically cost more considering there is an action associated to the advertisement.
+                                    You create your budget you are willing to spend on each advertisement
+                                    Your ad will display until your budget is depleted
+                                    This can be found in your account page titled "Create New Add".
+                                    A reminder will be emailed to you when your funds are running low.
                                 </div>
                             </li>
                         </ul>
@@ -48,3 +47,21 @@
             </div>
         </div>
 {% endblock page %}
+
+Advertising
+Featured Events
+These types of ads display across the top of the home page.  These are designed to catch the attention of the user towards your event.  They show up randomly with each new page and can be browsed through by clicking the arrow in the Featured Events box. They also show up in the reminder and "in the loop" emails.  They cost $2.00 per day.   You can find the option to make an event featured in the quick access box on the event itself or in your account info page under the Events Tab.
+
+Cost per Mile (CPM)
+Also known as cost per thousand.These ads you pay for a certain number of impressions.  How this work is:
+for every 1000 impressions you would pay $ .50 to $3.00 depending on the size of the ad
+So if you chose to spend $1000.00 your advertisement would be displayed 500,000 times across the screens of the viewers. (based on .50 add)
+This can be found in your account page titled "Create New Add".
+A reminder will be emailed to you when your funds are getting low.
+
+Cost per Click (CPC)
+Rather than paying for impressions, you are paying for every time someone clicks your ad and goes to your website or event page.  These type of advertisements typically cost more considering there is an action associated to the advertisement.
+You create your budget you are willing to spend on each advertisement
+Your ad will display until your budget is depleted
+This can be found in your account page titled "Create New Add".
+A reminder will be emailed to you when your funds are running low.
