Fixed tickets websites without http at start

--- a/alpha/event/templates/events/actions/buy_tickets_popup.html
+++ b/alpha/event/templates/events/actions/buy_tickets_popup.html
@@ -6,8 +6,8 @@
             Buy tickets
         </h1>
         <div class="content">
-            {% if event.is_tickets_representet_with_url %}
-                Please, visit <a href="{{ event.tickets }}" target="_blank">website</a>
+            {% if event.is_tickets_field_url %}
+                Please, visit <a href="{{ event.tickets_url }}" target="_blank">website</a>
             {% else %}
                 {{ event.tickets }}
             {% endif %}
