--- a/alpha/event/templates/events/create/_form.html
+++ b/alpha/event/templates/events/create/_form.html
@@ -219,6 +219,29 @@
                 </td>
             </tr>
             <tr>
+                <td valign="top" class="top-align">
+                    Attachments
+                    <a href="javascript:void;" class="balloon">
+                        <div class="buttonq"></div>
+                    </a>
+                    <div class="balloon-content">
+                        <h3>
+                            Help for
+                            <i>[attachments]:</i>
+                        </h3>
+                        <p>
+                            Attachments
+                        </p>
+                    </div>
+                </td>
+                <td class="price-td">
+                    {{ form.attachments }}
+                    {% for error in form.attachments.errors %}
+                        <div class="error">{{ error }}</div>
+                    {% endfor %}
+                </td>
+            </tr>
+            <tr>
                 <td>
                     Website
                     <a href="javascript:void;" class="balloon">
