--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-edit.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-edit.html
@@ -79,7 +79,7 @@
                         </div>
 
                         <div class="campaign-active-to">
-                            Will be active till
+                            Will be active until
                             {{ form.active_to }}
                         </div>
 
