--- a/alpha/advertising/templates/advertising/campaign/edit.html
+++ b/alpha/advertising/templates/advertising/campaign/edit.html
@@ -82,7 +82,7 @@
                     </div>
 
                     <div class="campaign-active-to">
-                        Will be active till
+                        Will be active until
                         {{ form.active_to }}
                     </div>
                     
