Fix empty elfinder page

--- a/alpha/elfinder/templates/elfinder.html
+++ b/alpha/elfinder/templates/elfinder.html
@@ -31,7 +31,7 @@
                 window.close();
             },
             resizable: false,
-            customData : { csrfmiddlewaretoken : '{{ csrf_token }}',  },
+            customData : { csrfmiddlewaretoken : '8eIZYnvV9EQzGI9myCUltQBN72NweOvA',  },
             onlyMimes: ["image"],
             commands: ['open', 'reload', 'quicklook', 'rm', 'rename', 'upload', 'search', 'view', 'sort']
         }).elfinder('instance');
@@ -40,6 +40,6 @@
 </script>
 </head>
 <body>
-<div class="finder"></div>
+<div id="elfinder"></div>
 </body>
 </html>
